[metadata]
name = poke
description = Poke is an open-source interface with commercial raytracing API's to perform Gaussian Beamlet Decomposition and Polarization Ray Tracing
author = Jaren Ashcraft
author_email = jashcraft@arizona.edu
license = BSD
license_files = LICENSE.md
github_project = Jashcraf/poke
platforms = win32
version = 1.0


[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.23.5
    matplotlib>=3.6.2
	zosapi==0.2
	numexpr>=2.8.4
    msgpack>=1.0.5
    msgpack-numpy>=0.4.8
    numpydoc>=1.5.0
    nbsphinx>=0.8.11
    scipy
python_requires = >= 3.8
setup_requires = setuptools_scm

[options.package_data]
poke = material_data/*.csv

